src/style/form.css
/*
Copyright (c) 2018 inSpace Technologies Ltd
This Source Code Form is subject to the terms of the Mozilla Public
License, v. 2.0. If a copy of the MPL was not distributed with this
file, You can obtain one at https://mozilla.org/MPL/2.0/.
*/
.form-element:not(:first-child) {
	margin-top: 1rem;
}
.form-element {
	display: flex;
}
.form-element.right {
	justify-content: flex-end;
}
.form-element.align > input {
  flex: 2;
}
.form-element.align > label {
  flex: 1;
}

